fix: double dogecoin logo on the about page on mobile

--- a/themes/hello-friend-ng/assets/scss/_about.scss
+++ b/themes/hello-friend-ng/assets/scss/_about.scss
@@ -54,6 +54,17 @@ $salmon: #F87B73;
     display: none;
     @media #{$media-size-phone} {
       display: block;
+      [data-theme="light"] & {
+        .dogegoin-dark {
+          display: none;
+        }
+      }
+
+      [data-theme="dark"] & {
+        .dogegoin-light {
+          display: none;
+        }
+      }
     }
   }
 
